# yabruc

./: .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml
.github/workflows/: build_and_test.yml  deploy_docs.yml
docs/: .gitignore  bun.lockb  compatibility.md  index.md  usage.md
docs/.vitepress/: config.mts
docs/compatibility/: HTTP.md  index.md
docs/images/: yabruc.ico:Zone.Identifier
src/: main.rs  parser.rs
src/hermes/: requester.rs
src/parser/: bru2struct.rs
test/: test.sh
test/bru-rs/: Example GET.bru  bruno.json
test/yabruc-bruno/: Example Empty.bru  Example GET.bru  Example POST.bru  Example PUT.bru  bruno.json
