[package]
name = "yabruc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
indicatif = "0.17.8"
lazy_static = "1.4.0"
reqwest = "0.12.2"
tokio = {version = "1.37.0", features = ["macros", "rt-multi-thread"]}
