[package]
name = "yabruc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
colored = "2.1.0"
indicatif = "0.17.8"
lazy_static = "1.4.0"
reqwest = "0.12.2"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = {version = "1.37.0", features = ["macros", "rt-multi-thread"]}
